_sass/_components/_post-listing.scss
.post-listing__wrapper {
  display: flex;
  padding: spacing(4) spacing(2) 0;
  flex-wrap: wrap;
  gap: spacing(4);
}

.post-listing__article {
  flex: 1 1 20rem;

  box-shadow: container(box-shadow, 2);
  border-style: solid;
  border-right-width: spacing(border);
  border-left-width: spacing(border);
  border-top-width: 0;
  border-bottom-width: 0;

  overflow: hidden;

  &:first-of-type {
    flex-basis: 40rem;
  }

  &:nth-of-type(5n - 2) {
    flex-basis: 24rem;
  }

  &:nth-of-type(7n - 3) {
    flex-basis: 18rem;
  }
}

.post-listing__image {
  aspect-ratio: 5 / 2;
  min-height: 12rem;
  background-size: cover;
  background-position: center;
}

.post-listing__content {
  padding: spacing(4);

  z-index: 1;
}

